update query string

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     // Ensure PageFlip is loaded before initializing flipbook
     document.addEventListener('DOMContentLoaded', function () {
       const totalPages = 24; // Number of pages in the catalog
-      const imagePrefix = 'https://cdn.shopify.com/s/files/1/0700/4844/8811/files/page_'; // Replace with your image path
-      const version = '?v=1745772654'; // The query string version part
+      const imagePrefix = 'https://soniquedrums.github.io/product-catalog/assets/page-images/2025/page_'; // Replace with your image path
+      const version = '?'; // The query string version part
 
       const pages = [];
       for (let i = 1; i <= totalPages; i++) {
