--- a/index.html
+++ b/index.html
@@ -4,19 +4,40 @@
   <meta charset="UTF-8">
   <title>Product Catalog Flipbook</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- PageFlip library from jsDelivr CDN -->
   <script src="https://cdn.jsdelivr.net/npm/page-flip@2.0.7/dist/js/page-flip.browser.min.js"></script>
   <script>
     // Ensure PageFlip is loaded before initializing flipbook
     document.addEventListener('DOMContentLoaded', function () {
-      const totalPages = 24; // Number of pages in the catalog
-      const imagePrefix = 'https://soniquedrums.github.io/product-catalog/assets/page-images/2024/page_'; // Replace with your image path
+      const urlParams = new URLSearchParams(window.location.search);
+      const selectedYear = urlParams.get('year'); // Get the selected year from the URL
+
+      // If no year is selected, return an error
+      if (!selectedYear) {
+        console.error('Catalog year is missing.');
+        return;
+      }
+
+      // Page count mapping for each year (you can adjust this based on the number of pages each catalog has)
+      const pageCountMapping = {
+        '2025': 24, // 2025 catalog has 30 pages
+        '2024': 16, // 2024 catalog has 24 pages
+        // Add more years and their respective page counts as needed
+      };
+
+      // Get total pages for the selected catalog year
+      const totalPages = pageCountMapping[selectedYear];
+      if (!totalPages) {
+        console.error('No page count found for the selected year.');
+        return;
+      }
+
+      const imagePrefix = `https://soniquedrums.github.io/product-catalog/assets/page-images/${selectedYear}/page_`;
       const version = '?'; // The query string version part
 
       const pages = [];
       for (let i = 1; i <= totalPages; i++) {
         const img = new Image();
-        img.src = `${imagePrefix}${i}.png${version}`; // Construct image path for each page with version
+        img.src = `${imagePrefix}${i}.png${version}`; // Construct image path dynamically
         pages.push(img);
       }
 
