--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
       // Page count mapping for each year (you can adjust this based on the number of pages each catalog has)
       const pageCountMapping = {
-        '2025': 24, // 2025 catalog has 30 pages
-        '2024': 16, // 2024 catalog has 24 pages
+        '2025': 24, // 2025 catalog has 24 pages
+        '2024': 16, // 2024 catalog has 16 pages
         // Add more years and their respective page counts as needed
       };
 
@@ -102,3 +102,26 @@
       background: #ffffff;
     }
     #controls {
+      height: 60px;
+      background: #333;
+      color: white;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 0 20px;
+      box-sizing: border-box;
+    }
+    #pageSlider {
+      width: 70%;
+    }
+  </style>
+</head>
+<body>
+
+<div id="controls">
+  <input type="range" id="pageSlider" min="1" value="1">
+</div>
+<div id="flipbook"></div>
+
+</body>
+</html>
