--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
       // Page count mapping for each year (you can adjust this based on the number of pages each catalog has)
       const pageCountMapping = {
-        '2025': 24, // 2025 catalog has 24 pages
-        '2024': 16, // 2024 catalog has 16 pages
+        '2025': 24, // 2025 catalog has 30 pages
+        '2024': 16, // 2024 catalog has 24 pages
         // Add more years and their respective page counts as needed
       };
 
@@ -100,7 +100,18 @@
       overflow: hidden;
       position: relative;
       background: #ffffff;
+
+      /* Disable anti-aliasing for crisper text */
+      text-rendering: optimizeLegibility;
+      -webkit-font-smoothing: none;
+      font-smooth: never;
     }
+
+    #flipbook img {
+      /* Ensure images aren't blurred by anti-aliasing */
+      image-rendering: pixelated;
+    }
+
     #controls {
       height: 60px;
       background: #333;
