--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             {
               width: 800,
               height: 1000,
-              size: 'stretch',
+              size: 'contain',
               minWidth: 315,
               minHeight: 400,
               maxWidth: 2000,
