--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
               width: 816,
               height: 1056,
               size: 'stretch',
-              minWidth: 612,
-              minHeight: 792,
+              minWidth: 816,
+              minHeight: 1056,
               maxWidth: 1632,
               maxHeight: 2112,
               showCover: true,
               flippingTime: 700,
               mobileScrollSupport: true,
               useMouseEvents: true,
-              autoSize: true,
+              autoSize: false,
               clickEventForward: true,
               usePortrait: true,
             }
