--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             {
               width: 816,
               height: 1056,
-              size: 'stretch',
+              size: 'cover',
               minWidth: 816,
               minHeight: 1056,
               maxWidth: 1632,
@@ -59,7 +59,7 @@
               flippingTime: 700,
               mobileScrollSupport: true,
               useMouseEvents: true,
-              autoSize: false,
+              autoSize: true,
               clickEventForward: true,
               usePortrait: true,
             }
