--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             {
               width: 816,
               height: 1056,
-              size: 'cover',
+              size: 'contain',
               minWidth: 816,
               minHeight: 1056,
               maxWidth: 1632,
