--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             {
               width: 816,
               height: 1056,
-              size: 'contain',
+              size: 'stretch',
               minWidth: 612,
               minHeight: 792,
               maxWidth: 816,
