--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               flippingTime: 700,
               mobileScrollSupport: true,
               useMouseEvents: true,
-              autoSize: true,
+              autoSize: false,
               clickEventForward: true,
               usePortrait: true,
             }
