--- a/index.html
+++ b/index.html
@@ -50,16 +50,17 @@
             {
               width: 816,
               height: 1056,
-              size: 'stretch',
-              minWidth: 612,
-              minHeight: 792,
-              maxWidth: 816,
-              maxHeight: 1056,
+              size: 'fixed',
+              minWidth: 300,
+              minHeight: 400,
+              maxWidth: 1632,
+              maxHeight: 2112,
               showCover: true,
               flippingTime: 700,
               mobileScrollSupport: true,
               useMouseEvents: true,
-              autoSize: false,
+              autoSize: true,
+              responsive: true,
               clickEventForward: true,
               usePortrait: true,
             }
