--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       overflow: hidden;
     }
     #flipbook {
-      width: 100%;
+      width: auto;
       max-width: 816px;
       height: auto;
       aspect-ratio: 816 / 1056;
