--- a/index.html
+++ b/index.html
@@ -97,27 +97,19 @@
     }
     #flipbook {
       width: 100%;
-      max-width: 816px;
       height: calc(100vh - 60px);
-      max-height: calc(100vh - 60px);
-      aspect-ratio: 816 / 1056;
-      margin: 0 auto;
       background: #ffffff;
       display: flex;
       justify-content: center;
       align-items: center;
+      overflow: hidden;
+      position: relative;
     
-      /* Enable anti-aliasing for text */
+      /* Anti-aliasing for better text */
       -webkit-font-smoothing: antialiased;
       font-smoothing: antialiased;
       text-rendering: optimizeLegibility;
     }
-
-    #flipbook img {
-      /* Enable anti-aliasing for images */
-      image-rendering: smooth;
-    }
-
     #controls {
       height: 60px;
       background: #333;
@@ -131,12 +123,21 @@
     #pageSlider {
       width: 70%;
     }
-    /* Mobile-specific adjustments */
+    #flipbook canvas,
+    #flipbook img {
+      max-width: 100%;
+      max-height: 100%;
+      width: auto;
+      height: auto;
+      object-fit: contain;
+      image-rendering: smooth;
+    }
+    
+    /* Mobile-specific tweaks */
     @media (max-width: 768px) {
       #flipbook {
-        width: 95vw;
-        height: auto;
-        max-height: calc(100vh - 60px);
+        height: calc(100vh - 60px);
+        width: 100vw;
       }
     }
   </style>
