--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
       width: 100%;
       height: calc(100vh - 60px);
       background: #ffffff;
+      overflow: hidden;
+      position: relative;
       display: flex;
       justify-content: center;
       align-items: center;
-      overflow: hidden;
-      position: relative;
     
       /* Anti-aliasing for better text */
       -webkit-font-smoothing: antialiased;
@@ -123,21 +123,21 @@
     #pageSlider {
       width: 70%;
     }
-    #flipbook canvas,
-    #flipbook img {
+    /* VERY IMPORTANT: also target the canvas inside flipbook */
+    #flipbook canvas {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
       max-width: 100%;
       max-height: 100%;
-      width: auto;
-      height: auto;
-      object-fit: contain;
-      image-rendering: smooth;
+      display: block;
     }
     
-    /* Mobile-specific tweaks */
+    /* Mobile-specific tweak */
     @media (max-width: 768px) {
       #flipbook {
-        height: calc(100vh - 60px);
         width: 100vw;
+        height: calc(100vh - 60px);
       }
     }
   </style>
