--- a/index.html
+++ b/index.html
@@ -88,24 +88,23 @@
     });
   </script>
   <style>
-    body, html {
+    html, body {
       margin: 0;
       padding: 0;
       height: 100%;
-      background: #f0f0f0;
       overflow: hidden;
     }
+    }
     #flipbook {
-      width: 100%;
-      height: calc(100vh - 60px);
-      background: #ffffff;
-      overflow: hidden;
-      position: relative;
+      width: 100vw;
+      height: calc(100vh - 60px); /* Full screen minus controls */
+      background: #fff;
       display: flex;
       justify-content: center;
       align-items: center;
+      overflow: hidden;
+      position: relative;
     
-      /* Anti-aliasing for better text */
       -webkit-font-smoothing: antialiased;
       font-smoothing: antialiased;
       text-rendering: optimizeLegibility;
@@ -125,14 +124,13 @@
     }
     /* VERY IMPORTANT: also target the canvas inside flipbook */
     #flipbook canvas {
-      width: 100%;
-      height: 100%;
-      object-fit: contain;
       max-width: 100%;
       max-height: 100%;
+      width: auto;
+      height: auto;
+      object-fit: contain;
       display: block;
     }
-    
     /* Mobile-specific tweak */
     @media (max-width: 768px) {
       #flipbook {
