--- a/index.html
+++ b/index.html
@@ -50,19 +50,21 @@
             {
               width: 816,
               height: 1056,
-              size: 'fixed',
-              minWidth: 300,
-              minHeight: 400,
-              maxWidth: 1632,
-              maxHeight: 2112,
+              size: 'fixed',      // <<< very important
+              minWidth: 320,       // minimum width for mobile
+              minHeight: 480,      // minimum height for mobile
+              maxWidth: 1632,      // double the image size if needed
+              maxHeight: 2112,     
               showCover: true,
               flippingTime: 700,
               mobileScrollSupport: true,
               useMouseEvents: true,
-              autoSize: true,
-              responsive: true,
+              autoSize: true,     // <<< very important
               clickEventForward: true,
               usePortrait: true,
+              startZIndex: 0,
+              maxShadowOpacity: 0.5,
+              showPageCorners: true,
             }
           );
 
