--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
       height: calc(100vh - 60px);
       background: #fff;
       position: relative;
+      overflow: hidden;
     }
     
     #flipbook canvas {
