try to recalculate window size

--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
           );
 
           pageFlip.loadFromImages(pages.map(page => page.src));
+          
+          // Force PageFlip to re-calculate sizes
+          window.addEventListener('load', () => {
+            pageFlip.updateFromClient();
+          });
 
           // Setup slider
           const pageSlider = document.getElementById('pageSlider');
