--- a/index.html
+++ b/index.html
@@ -39,8 +39,6 @@
       const flipbookElement = document.getElementById('flipbook');
       if (flipbookElement) {
         if (typeof St !== 'undefined' && St.PageFlip) {
-          const aspectRatio = 816 / 1056; // Aspect ratio of the images
-
           let pageFlip = new St.PageFlip(flipbookElement, {
             size: 'fixed',
             width: window.innerWidth * 0.9,  // 90% of viewport width
@@ -68,7 +66,7 @@
           // Dynamically resize PageFlip when the window is resized
           window.addEventListener('resize', () => {
             const newWidth = window.innerWidth * 0.9;  // 90% of viewport width
-            const newHeight = newWidth / aspectRatio; // Maintain the aspect ratio
+            const newHeight = window.innerHeight * 0.8;  // 80% of viewport height
 
             pageFlip.resize(newWidth, newHeight);
             pageFlip.updateFromClient();
@@ -108,6 +106,15 @@
       overflow: hidden;
       position: relative;
       background: #ffffff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    #flipbook img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain; /* Keep the aspect ratio intact */
     }
 
     #controls {
