--- a/index.html
+++ b/index.html
@@ -70,7 +70,11 @@
 
             pageFlip.resize(newWidth, newHeight);
             pageFlip.updateFromClient();
+            scaleFlipbook();
           });
+
+          // Set the initial scale for the flipbook to fit the screen
+          scaleFlipbook();
 
           // Setup page slider
           const pageSlider = document.getElementById('pageSlider');
@@ -90,6 +94,22 @@
         console.error('#flipbook element not found.');
       }
     });
+
+    function scaleFlipbook() {
+      const flipbookElement = document.getElementById('flipbook');
+      const flipbookWidth = flipbookElement.offsetWidth;
+      const flipbookHeight = flipbookElement.offsetHeight;
+
+      // Calculate scale factor based on the smaller dimension (width or height)
+      const scaleX = window.innerWidth / flipbookWidth;
+      const scaleY = window.innerHeight / flipbookHeight;
+
+      const scale = Math.min(scaleX, scaleY);
+
+      // Apply scaling to fit the screen
+      flipbookElement.style.transform = `scale(${scale})`;
+      flipbookElement.style.transformOrigin = 'top left';  // Ensure scaling is from the top-left corner
+    }
   </script>
   <style>
     body, html {
@@ -106,15 +126,11 @@
       overflow: hidden;
       position: relative;
       background: #ffffff;
-      display: flex;
-      justify-content: center;
-      align-items: center;
     }
 
     #flipbook img {
       width: 100%;
       height: 100%;
-      object-fit: contain; /* Keep the aspect ratio intact */
     }
 
     #controls {
