--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@
       const flipbookElement = document.getElementById('flipbook');
       if (flipbookElement) {
         if (typeof St !== 'undefined' && St.PageFlip) {
+          // Initialize PageFlip
           const pageFlip = new St.PageFlip(flipbookElement, {
-            size: 'fixed',
-            width: window.innerWidth * 0.9,  // 90% of viewport width
-            height: window.innerHeight * 0.8,  // 80% of viewport height
+            size: 'fixed',  // Keep the size fixed
+            width: window.innerWidth * 0.9,  // Use 90% of the viewport width
+            height: window.innerHeight * 0.75,  // Use 75% of the viewport height
             minWidth: 612,
             minHeight: 792,
             maxWidth: 816,
@@ -61,8 +62,7 @@
           // Dynamically resize PageFlip when the window is resized
           window.addEventListener('resize', () => {
             const newWidth = window.innerWidth * 0.9;  // 90% of viewport width
-            const newHeight = window.innerHeight * 0.8;  // 80% of viewport height
-
+            const newHeight = window.innerHeight * 0.75;  // 75% of viewport height
             pageFlip.resize(newWidth, newHeight);
             pageFlip.updateFromClient();
           });
@@ -101,12 +101,13 @@
       overflow: hidden;
       position: relative;
       background: #ffffff;
+      object-fit: contain;  /* Ensure images scale properly */
     }
 
     #flipbook img {
       width: 100%;
       height: 100%;
-      object-fit: contain; /* Ensure the images fit well without being stretched */
+      object-fit: contain;  /* Ensure images are not stretched */
     }
 
     #controls {
@@ -126,7 +127,7 @@
 
     @media (max-width: 768px) {
       #flipbook {
-        height: 100vh; /* Ensure it takes full height on smaller devices */
+        height: 100vh; /* Use full height on smaller devices */
       }
     }
   </style>
