--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         if (typeof St !== 'undefined' && St.PageFlip) {
           // Initialize PageFlip
           const pageFlip = new St.PageFlip(flipbookElement, {
-            size: 'fixed',  // Keep the size fixed
-            width: window.innerWidth * 0.9,  // Use 90% of the viewport width
+            size: 'fixed', // Keep the size fixed
+            width: window.innerWidth * 0.8,  // Use 80% of the viewport width for desktops
             height: window.innerHeight * 0.75,  // Use 75% of the viewport height
             minWidth: 612,
             minHeight: 792,
@@ -61,7 +61,7 @@
 
           // Dynamically resize PageFlip when the window is resized
           window.addEventListener('resize', () => {
-            const newWidth = window.innerWidth * 0.9;  // 90% of viewport width
+            const newWidth = window.innerWidth * 0.8;  // 80% of viewport width for desktops
             const newHeight = window.innerHeight * 0.75;  // 75% of viewport height
             pageFlip.resize(newWidth, newHeight);
             pageFlip.updateFromClient();
