--- a/index.html
+++ b/index.html
@@ -61,8 +61,18 @@
 
           // Dynamically resize PageFlip when the window is resized
           window.addEventListener('resize', () => {
-            const newWidth = window.innerWidth * 0.8;  // 80% of viewport width for desktops
-            const newHeight = window.innerHeight * 0.75;  // 75% of viewport height
+            const aspectRatio = 816 / 1056;
+            const windowWidth = window.innerWidth * 0.8;
+            const windowHeight = window.innerHeight * 0.75;
+
+            let newWidth = windowWidth;
+            let newHeight = newWidth / aspectRatio;
+
+            if (newHeight > windowHeight) {
+              newHeight = windowHeight;
+              newWidth = newHeight * aspectRatio;
+            }
+
             pageFlip.resize(newWidth, newHeight);
             pageFlip.updateFromClient();
           });
@@ -109,7 +119,7 @@
     #flipbook img {
       width: 100%;
       height: 100%;
-      object-fit: contain;  /* Ensure images are not stretched */
+      object-fit: contain; /* Ensure images are not stretched */
     }
 
     #controls {
