--- a/index.html
+++ b/index.html
@@ -7,132 +7,81 @@
   <script src="https://cdn.jsdelivr.net/npm/page-flip@2.0.7/dist/js/page-flip.browser.min.js"></script>
   <script>
     // Ensure PageFlip is loaded before initializing flipbook
-    document.addEventListener('DOMContentLoaded', function () {
-      const urlParams = new URLSearchParams(window.location.search);
-      const selectedYear = urlParams.get('year'); // Get the selected year from the URL
+document.addEventListener('DOMContentLoaded', function () {
+  const urlParams = new URLSearchParams(window.location.search);
+  const selectedYear = urlParams.get('year'); // Get the selected year from the URL
 
-      // If no year is selected, return an error
-      if (!selectedYear) {
-        console.error('Catalog year is missing.');
-        return;
-      }
+  // If no year is selected, return an error
+  if (!selectedYear) {
+    console.error('Catalog year is missing.');
+    return;
+  }
 
-      // Page count mapping for each year (you can adjust this based on the number of pages each catalog has)
-      const pageCountMapping = {
-        '2025': 24, // 2025 catalog has 30 pages
-        '2024': 16, // 2024 catalog has 24 pages
-        // Add more years and their respective page counts as needed
-      };
+  // Page count mapping for each year (you can adjust this based on the number of pages each catalog has)
+  const pageCountMapping = {
+    '2025': 24, // 2025 catalog has 30 pages
+    '2024': 16, // 2024 catalog has 24 pages
+    // Add more years and their respective page counts as needed
+  };
 
-      // Get total pages for the selected catalog year
-      const totalPages = pageCountMapping[selectedYear];
-      if (!totalPages) {
-        console.error('No page count found for the selected year.');
-        return;
-      }
+  // Get total pages for the selected catalog year
+  const totalPages = pageCountMapping[selectedYear];
+  if (!totalPages) {
+    console.error('No page count found for the selected year.');
+    return;
+  }
 
-      const imagePrefix = https://soniquedrums.github.io/product-catalog/assets/page-images/${selectedYear}/page_;
-      const version = '?'; // The query string version part
+  const imagePrefix = `https://soniquedrums.github.io/product-catalog/assets/page-images/${selectedYear}/page_`;
+  const version = '?'; // The query string version part
 
-      const pages = [];
-      for (let i = 1; i <= totalPages; i++) {
-        const img = new Image();
-        img.src = ${imagePrefix}${i}.png${version}; // Construct image path dynamically
-        pages.push(img);
-      }
+  const pages = [];
+  for (let i = 1; i <= totalPages; i++) {
+    const img = new Image();
+    img.src = `${imagePrefix}${i}.png${version}`; // Construct image path dynamically
+    pages.push(img);
+  }
 
-      // Ensure the #flipbook element exists before initializing PageFlip
-      const flipbookElement = document.getElementById('flipbook');
-      if (flipbookElement) {
-        if (typeof St !== 'undefined' && St.PageFlip) {
-          let pageFlip = new St.PageFlip(
-            flipbookElement,
-            {
-              width: 816,
-              height: 1056,
-              size: 'stretch',
-              minWidth: 612,
-              minHeight: 792,
-              maxWidth: 816,
-              maxHeight: 1056,
-              showCover: true,
-              flippingTime: 700,
-              mobileScrollSupport: true,
-              useMouseEvents: true,
-              autoSize: false,
-              clickEventForward: true,
-              usePortrait: true,
-            }
-          );
-
-          pageFlip.loadFromImages(pages.map(page => page.src));
-
-          // Setup slider
-          const pageSlider = document.getElementById('pageSlider');
-          pageSlider.max = pages.length;
-
-          pageSlider.addEventListener('input', (e) => {
-            pageFlip.flip(parseInt(e.target.value) - 1);
-          });
-
-          pageFlip.on('flip', (e) => {
-            pageSlider.value = e.data + 1;
-          });
-        } else {
-          console.error('PageFlip library not loaded properly.');
+  // Ensure the #flipbook element exists before initializing PageFlip
+  const flipbookElement = document.getElementById('flipbook');
+  if (flipbookElement) {
+    if (typeof St !== 'undefined' && St.PageFlip) {
+      let pageFlip = new St.PageFlip(
+        flipbookElement,
+        {
+          width: 816, // Match image width (aspect ratio of 816x1056)
+          height: 1056, // Match image height
+          size: 'contain', // Use 'contain' to prevent stretching and maintain aspect ratio
+          minWidth: 816,
+          minHeight: 1056,
+          maxWidth: 1632, // Double the size for higher resolutions
+          maxHeight: 2112,
+          showCover: true,
+          flippingTime: 700,
+          mobileScrollSupport: true,
+          useMouseEvents: true,
+          autoSize: true, // Auto-size while maintaining aspect ratio
+          clickEventForward: true,
+          usePortrait: true,
         }
-      } else {
-        console.error('#flipbook element not found.');
-      }
-    });
-  </script>
-  <style>
-    body, html {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      background: #f0f0f0;
-      overflow: hidden;
-    }
-    #flipbook {
-      width: 100%;
-      height: calc(100% - 60px);
-      overflow: hidden;
-      position: relative;
-      background: #ffffff;
+      );
 
-      /* Enable anti-aliasing for text */
-      -webkit-font-smoothing: antialiased;
-      font-smoothing: antialiased;
-      text-rendering: optimizeLegibility;
-    }
+      pageFlip.loadFromImages(pages.map(page => page.src));
 
-    #flipbook img {
-      /* Enable anti-aliasing for images */
-      image-rendering: smooth;
-    }
+      // Setup slider
+      const pageSlider = document.getElementById('pageSlider');
+      pageSlider.max = pages.length;
 
-    #controls {
-      height: 60px;
-      background: #333;
-      color: white;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 0 20px;
-      box-sizing: border-box;
-    }
-    #pageSlider {
-      width: 70%;
-    }
-  </style>
-</head>
-<body>
+      pageSlider.addEventListener('input', (e) => {
+        pageFlip.flip(parseInt(e.target.value) - 1);
+      });
 
-<div id="controls">
-  <input type="range" id="pageSlider" min="1" value="1">
-</div>
-<div id="flipbook"></div>
-
-</body>
-</html>
+      pageFlip.on('flip', (e) => {
+        pageSlider.value = e.data + 1;
+      });
+    } else {
+      console.error('PageFlip library not loaded properly.');
+    }
+  } else {
+    console.error('#flipbook element not found.');
+  }
+});
