--- a/index.html
+++ b/index.html
@@ -108,8 +108,7 @@
     }
 
     #flipbook img {
-      /* Enable anti-aliasing for images */
-      image-rendering: smooth;
+    image-rendering: optimizeQuality;
     }
 
     #controls {
