update background color

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       height: calc(100% - 60px);
       overflow: hidden;
       position: relative;
-      background: #ffffff;
+      background: #727272;
 
       /* Enable anti-aliasing for text */
       -webkit-font-smoothing: antialiased;
