--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
       // Page count mapping for each year (you can adjust this based on the number of pages each catalog has)
       const pageCountMapping = {
+        '2026': 24, // 2026 catalog has 24 pages
         '2025': 24, // 2025 catalog has 24 pages
         '2024': 16, // 2024 catalog has 16 pages
         // Add more years and their respective page counts as needed
