--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       height: calc(100% - 60px);
       overflow: hidden;
       position: relative;
-      background: #ffffff;
+      background: #727272;
       -webkit-font-smoothing: antialiased;
       font-smoothing: antialiased;
       text-rendering: optimizeLegibility;
